ingress.yml
apiVersion: extensions/v1 
kind: Ingress 
metadata: 
  name: my-tomcat 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /my-tomcat 
        backend: 
          serviceName: my-tomcat 
          servicePort: 80
